[tool.poetry]
name = "async_web_scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
beautifulsoup4 = "^4.11.1"
asyncio = "^3.4.3"
pandas = "^1.5.1"
aiofiles = "^22.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
